terraform/manifests/networking-001/security-group.tf
resource "aws_security_group" "security_group_public" {
  name        = "${var.prefix}-public-sequrity-group"
  description = "Allow ICMP, SSH, and port 8080"
  vpc_id      = aws_vpc.vpc_main.id

  ingress {
    description = "Allow ICMP IPv4"
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow port 8080"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.prefix}-public-sequrity-group"
  }
}
